fixed z-index issues

--- a/frontend/src/components/FiltersMenu.css
+++ b/frontend/src/components/FiltersMenu.css
@@ -13,7 +13,7 @@
   background-color: #fff;
   margin-top: 8px;
   margin-bottom: 92px;
-  z-index: 11;
+  z-index: 8;
 }
 
 .crossContainer {
@@ -23,7 +23,6 @@
   position: absolute;
   top: 0;
   right: 0;
-  z-index: 3;
 }
 
 .closingCross {
@@ -56,10 +55,12 @@ hr {
 
   .filtersMenu h3 {
     font-size: 1.3rem;
+    margin: 0;
   }
 
   hr {
     width: 90%;
+    margin: 8px;
   }
 
   /*filters menu background fits all the page*/
@@ -71,7 +72,11 @@ hr {
     width: 100%;
     height: 100%;
     background-color: rgba(22, 22, 22, 0.6);
-    z-index: 10;
+    z-index: 11;
     font-size: 0;
+  }
+
+  .filtersMenu {
+    z-index: 12;
   }
 }
